used 17 features